Update 01_java_internals.md